changed title style + added CV and other CSS

--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -68,6 +68,9 @@
                 <p style="text-align: center; font-size: 24px; margin: 2% 0;">
                     I'm an IT Application Specialist based in Brno, Czech Republic, who is building full-stack websites and applications.
                     I love to learn technologies and to build new projects. </p>
+                    <div style="text-align:center">
+                        <a class="btn btn-info" target="_blank" href="./docs/Alex_Buaiscia_CV.pdf">Download my CV</a>
+                    </div>
             </div>
         </div>
         <div id="skills"  class="row">
@@ -95,16 +98,17 @@
                         <img src="./img/alexbuaiscia.jpg" alt="main website of mine">
                         <br>
                         <p id="caption">Main website. 
-                        <br> Functions: login and sign-up; GUI to write and post on-line.
-                        <br> Technologies used: HTML5/CSS3, NodeJS, EJS, JS, MongoDB </p>
+                        <br>Functions: login and sign-up; GUI to write and post on-line.
+                        <br><span style="font-weight: 600">Technologies used: HTML5/CSS3, NodeJS, EJS, JS, MongoDB</span> 
+                        </p>
                     </div>
                     <div style="margin: auto; text-align: center">
                         <img src="./img/deployment_tool.jpg" alt="developed deployment tool">
                         <br>
                         <p id="caption">Work related deployment tool. Functions: upload files on an automation server;
-                        <br>Deploy and sync buttons are loading the wanted file on the application server 
-                        <br>and running shell scripts to deploy and sync the servers with the given parameters. 
-                        <br>Technologies used: HTML5/CSS3, NodeJS, EJS, JS, Shell/Bash
+                        <br>Loading the wanted file on one application server and running shell scripts 
+                        <br>to deploy and sync all the servers with the given parameters. 
+                        <br><span style="font-weight: 600">Technologies used: HTML5/CSS3, NodeJS, EJS, JS, Shell/Bash</span>
                         </p>
                     </div>
                     
