--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
 
     <title>Alex Buaiscia</title>
     <style>
-        @import url('https://fonts.googleapis.com/css?family=Tangerine|Libre+Baskerville|Old+Standard+TT|Monoton');
+        @import url('https://fonts.googleapis.com/css?family=Tangerine|Libre+Baskerville|Old+Standard+TT|Monoton|Dancing+Script');
     </style>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="http://cdn.phpoll.com/css/animate.css" rel="stylesheet">
@@ -40,7 +40,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                    <a class="navbar-brand" href="#">Alex Buaiscia</a>
+                    <a style="font-family: 'Dancing Script', cursive; font-size: 40px;" class="navbar-brand" href="#">Alex Buaiscia</a>
 
                     <ul style="margin: auto;" class="nav navbar-nav navbar-left">
                         <li><a class="nav-item nav-link active" href="/">Home</a></li>
