--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header %>
 
-    <div style="margin-top: 80px;">
+    <div style="margin-top: 100px;">
         <h1 style="text-align:center">Sign Up</h1>
         <div style="width:30%; margin: 80px auto;">
             <form action="/register" method="POST">
@@ -14,7 +14,7 @@
                     <input type="text" name="email" placeholder="email (not mandatory) ">
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-lg btn-primary btn-block">Sign Up</button>
+                    <button type="submit" class="btn btn-lg btn-primary btn-block">Sign Up</button>
                 </div>
             </form>
             <a href="javascript:history.back()">Go Back</a>
