--- a/views/space/spaceblog.ejs
+++ b/views/space/spaceblog.ejs
@@ -35,7 +35,7 @@
                                         </div>
                                         <div class="card-footer text-muted">
                                             Posted on
-                                            <%= moment(post.createdOn).format('dddd DD/MM/YYYY hh24');  %>
+                                            <%= moment(post.createdOn).format('dddd DD/MM/YYYY');  %>
                                                 by
                                                 <%= post.author.username %>
                                         </div>
