--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header %>
 
-    <div style="margin-top: 80px">
+    <div style="margin-top: 100px;">
         <h1 style="text-align:center">Login</h1>
         <div style="width:30%; margin: 80px auto;">
             <form action="/login" method="POST">
@@ -11,7 +11,7 @@
                     <input type="password" name="password" placeholder="password">
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-lg btn-primary btn-block">Login</button>
+                    <button type="submit" class="btn btn-lg btn-primary btn-block">Login</button>
                 </div>
             </form>
             <a href="javascript:history.back()">Go Back</a>
