--- a/views/space/newPost.ejs
+++ b/views/space/newPost.ejs
@@ -15,7 +15,7 @@
                         </div>
 
                         <div class="form-group">
-                            <textarea name="text" id="mytextarea" placeholder="Your text here"></textarea>
+                            <textarea rows="10" cols="100" name="text" id="mytextarea" placeholder="Your text here"></textarea>
                         </div>
                         <div class="form-group">
                             <input class="form-control" type="text" name="description" placeholder="description">
