--- a/views/space/showSpacePost.ejs
+++ b/views/space/showSpacePost.ejs
@@ -33,15 +33,18 @@
                         <% }%>
                 </div>
             </div>
+        </div>
             <div class="row">
                 <div class="imagePost col-md-12 ">
+                    <br>
                     <a class="btn btn-success" href="/spaceblog/<%= spacePost._id %>/comments/new">Add New Comment</a>
                     <hr>
                     <% spacePost.comments.forEach(function(comment){ %>
                         <div class="row">
                             <div class="col-md-12">
                                 <strong><%= comment.author.username %></strong> on
-                                <span class="pull-right"><%= moment(comment.createdOn).format('dddd DD/MM/YYYY');  %></span>
+                                <strong><%= moment(comment.createdOn).format('dddd DD/MM/YYYY');  %></strong>
+                                <br><br>
                                 <p>
                                     <%= comment.text %>
                                 </p>
@@ -56,7 +59,6 @@
                         <% }) %>
                 </div>
             </div>
-        </div>
     </div>
 
 
