--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,9 +27,10 @@
     <header>
 
 
-        <div id="navStyle" class="container-fluid">
+        <div id="navStyle" class="container-fluid px-0">
 
-            <nav class="navbar navbar-expand-lg navbar-light" role="navigation">
+            <nav class="navbar navbar-expand-xl navbar-light" role="navigation">
+                    <a style="font-family: 'Dancing Script', cursive; font-size: 40px;" class="navbar-brand" href="#">Alex Buaiscia</a>
 
                 <div class="navbar-header">
 
@@ -40,7 +41,6 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                    <a style="font-family: 'Dancing Script', cursive; font-size: 40px;" class="navbar-brand" href="#">Alex Buaiscia</a>
 
                     <ul style="margin: auto;" class="nav navbar-nav navbar-left">
                         <li><a class="nav-item nav-link active" href="/">Home</a></li>
