--- a/views/space/edit.ejs
+++ b/views/space/edit.ejs
@@ -17,7 +17,7 @@
                             <input class="form-control" type="text" name="spacePost[image]" value="<%= spacePost.image %>">
                         </div>
                         <div class="form-group">
-                            <textarea name="spacePost[text]" id="mytextarea"><%= spacePost.text %></textarea>
+                            <textarea rows="10" cols="150" name="spacePost[text]" id="mytextarea"><%= spacePost.text %></textarea>
                         </div>
                         <div class="form-group">
                             <input class="form-control" type="text" name="spacePost[description]" value="<%= spacePost.description %>">
