--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -76,7 +76,7 @@
         <div id="skills"  class="row">
             <div class="col-md-12">
                 <h2 class="sectionTitle">Skills</h2>
-                <section class="d-flex flex-row justify-content-around"  style="margin: 1% 5%; font-size: 6em; ">
+                <section class="d-flex flex-column flex-lg-row justify-content-between"  style="margin: 1% 5%; font-size: 6em; ">
                     <img src="./img/if_html5_294678.svg" alt="HTML5">
                     <img src="./img/if_css3_294692.svg" alt="CSS3">
                     <i class="fab fa-js"></i>
@@ -93,7 +93,7 @@
         <div id="projects" class="row">
             <div class="col-md-12">
                 <h2 class="sectionTitle">Portfolio</h2>
-                <section id="projects" style="margin: 2% 0;" class="d-flex flex-row justify-content-around">
+                <section id="projects" style="margin: 2% 0;" class="d-flex flex-column flex-lg-row justify-content-between">
                     <div style="margin: auto">
                         <img src="./img/alexbuaiscia.jpg" alt="main website of mine">
                         <br>
