fixed landing img

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -47,7 +47,7 @@
                     <div class="col-md-4">
                         <a href="/spaceblog">
                             <div class="card mb-3 entry">
-                                <img class="card-img-top" src="https://img.purch.com/h/1000/aHR0cDovL3d3dy5zcGFjZS5jb20vaW1hZ2VzL2kvMDAwLzA4MC8xMjcvb3JpZ2luYWwvaHlwZXJpb24tcHJvdG9jbHVzdGVyLmpwZw==" alt="Hiperion supercluster">
+                                <img class="card-img-top" src="img/hiperion_cluster.jpg" alt="Hiperion supercluster">
                                 <div class="card-info">
                                     <h2>Space blog</h2>
                                 </div>
