added blog section to dev

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -65,7 +65,7 @@
                             <div style="z-index: 90;" class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="/devlife">Dev Home</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item disabled" href="#">Dev Blog</a>
+                                <a class="dropdown-item" href="/devblog">Dev Blog</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item disabled" href="#">Curriculum</a>
                             </div>
