--- a/views/dev/showPost.ejs
+++ b/views/dev/showPost.ejs
@@ -37,7 +37,7 @@
             <div class="row">
                 <div class="imagePost col-md-12 ">
                     <br>
-                    <a class="btn btn-success" href="/devblog/<%= devPost._id %>/comments/new">Add New Comment</a>
+                    <a class="btn btn-success" href="/devblog/<%= devPost._id %>/devcomment/new">Add New Comment</a>
                     <hr>
                     <% devPost.comments.forEach(function(comment){ %>
                         <div class="row">
@@ -49,8 +49,8 @@
                                     <%= comment.text %>
                                 </p>
                                 <% if(currentUser && (comment.author.id.equals(currentUser._id) || currentUser.username === "alex")) { %>
-                                    <a class="btn btn-xs btn-warning" href="/devblog/<%=devPost._id %>/comments/<%=comment._id %>/edit">Edit</a>
-                                    <form style="display: inline" id="delete-form" action="/devblog/<%=devPost._id %>/comments/<%=comment._id %>?_method=DELETE" method="POST">
+                                    <a class="btn btn-xs btn-warning" href="/devblog/<%=devPost._id %>/devcomment/<%=comment._id %>/edit">Edit</a>
+                                    <form style="display: inline" id="delete-form" action="/devblog/<%=devPost._id %>/devcomment/<%=comment._id %>?_method=DELETE" method="POST">
                                         <input type="submit" class="btn btn-xs btn-danger" value="Delete">
                                     </form>
                                     <% } %>
