--- a/views/devcomment/new.ejs
+++ b/views/devcomment/new.ejs
@@ -1,10 +1,10 @@
 <% include ../partials/header %>
     <div class="row">
         <h1 style="text-align: center">Add New Comment to
-            <%= spacePost.name %>
+            <%= devPost.name %>
         </h1>
         <div style="width: 30%; margin: 25px auto;">
-            <form action="/spaceblog/<%= spacePost._id %>/devcomment" method="POST">
+            <form action="/devblog/<%= devPost._id %>/devcomment" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" name="comment[text]" placeholder="text">
                 </div>
@@ -12,7 +12,7 @@
                     <button class="btn btn-lg btn-primary btn-block">Submit!</button>
                 </div>
             </form>
-            <a href="/spaceblog">Go Back</a>
+            <a href="/devblog">Go Back</a>
         </div>
     </div>
     <% include ../partials/footer %>
