--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,16 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/main.css">
 
-
+    <script src="https://cloud.tinymce.com/5/tinymce.min.js"></script>
+    <script>
+    tinymce.init({
+        selector: "textarea",  
+        height: 600,
+        plugins: "codesample code",
+        toolbar: "undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image | codesample | code"
+        });
+    
+    </script>
 
 </head>
 
