--- a/views/dev/devblog.ejs
+++ b/views/dev/devblog.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %>
     <div class="spaceSection">
         <div class="row">
-            <h1 id="titleSpace" class="my-4">Dev blog
+            <h1 id="titleDevBlog" class="my-4">Dev blog
             </h1>
             </div>
             <div class="col-md-10 col-sm-10 col-lg-10">
