--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -2,17 +2,6 @@
 
 
     
-    
-
-    <script src='https://cloud.tinymce.com/stable/tinymce.min.js'></script> 
-    <script>
-        tinymce.init({
-            selector: '#mytextarea',
-            plugins: 'autoresize advlist autolink link image lists charmap print preview'
-        });
-    </script>
-
-    
     <div>
         <div class="row">
             <div class="col-md-12">
@@ -42,8 +31,8 @@
                             <div class="carousel-item">
                                 <img style="max-height: 714px" class="d-block w-100" src="./img/desk.jpg" alt="Second slide">
                                 <div class="carousel-caption d-none d-md-block btnSlide">
-                                    <a href="#"><button type="button" class="btn btn-default btnSlide">Sharing some knowledge 
-                                    <br> <span style="font-size: 0.5em">(Under Construction)</span></button></a>
+                                    <a href="/devblog"><button type="button" class="btn btn-default btnSlide">Sharing some knowledge 
+                                    </button></a>
                                 </div>
                             </div>
 
