little fix to footer + started adding portfolio dedicated page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,7 @@
 html {
-    position: relative;
-    min-height: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 body {
@@ -15,12 +16,13 @@ body {
     /* bottom = footer height */
     padding: 0;
     padding-bottom: 10%;
-    max-width: 100%;
+    height: 100vh;
     font-family: 'Old Standard TT', serif;
 }
 
 footer {
-    position: absolute;
+    flex-shrink: 0;
+    /* position: absolute; */
     left: 0;
     bottom: 0;
     width: 100%;
@@ -407,4 +409,9 @@ a:active {
 #titleDevBlog {
     font-family: 'Cinzel', serif;
     font-size: 3.5em;
+}
+
+.portfolioimg {
+    max-width: 600px;
+    max-height: 300px;
 }
