--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -23,13 +23,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="./img/road.jpg" alt="First slide">
+                                <img class="d-block w-100" src="../img/road.jpg" alt="First slide">
                                 <div class="carousel-caption d-none d-md-block">
                                     <a href="#skills"><button type="button" class="btn btn-default btnSlide">Are those the skills you need?</button></a>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img style="max-height: 714px" class="d-block w-100" src="./img/desk.jpg" alt="Second slide">
+                                <img style="max-height: 714px" class="d-block w-100" src="../img/desk.jpg" alt="Second slide">
                                 <div class="carousel-caption d-none d-md-block btnSlide">
                                     <a href="/devblog"><button type="button" class="btn btn-default btnSlide">Sharing some knowledge 
                                     </button></a>
@@ -58,7 +58,7 @@
                     I'm an IT Application Specialist based in Brno, Czech Republic, who is building full-stack websites and applications.
                     I love to learn technologies and to build new projects. </p>
                     <div style="text-align:center">
-                        <a class="btn btn-info" target="_blank" href="./docs/Alex_Buaiscia_CV.pdf">Download my CV</a>
+                        <a class="btn btn-info" target="_blank" href="../docs/Alex_Buaiscia_CV.pdf">Download my CV</a>
                     </div>
             </div>
         </div>
@@ -66,12 +66,12 @@
             <div class="col-md-12">
                 <h2 class="sectionTitle">Skills</h2>
                 <section class="d-flex flex-column flex-lg-row justify-content-between"  style="margin: 1% 5%; font-size: 6em; ">
-                    <img src="./img/if_html5_294678.svg" alt="HTML5">
-                    <img src="./img/if_css3_294692.svg" alt="CSS3">
+                    <img src="../img/if_html5_294678.svg" alt="HTML5">
+                    <img src="../img/if_css3_294692.svg" alt="CSS3">
                     <i class="fab fa-js"></i>
-                    <img src="./img/if_nodejs-new-pantone-black_1012818.svg" alt="NodeJS">
+                    <img src="../img/if_nodejs-new-pantone-black_1012818.svg" alt="NodeJS">
                     <i class="fab fa-npm"></i>
-                    <img src="./img/if_mongodb_1012822.svg" alt="MongoDB">
+                    <img src="../img/if_mongodb_1012822.svg" alt="MongoDB">
                     <i class="fas fa-database"></i>
                     <i class="fab fa-linux"></i>
                     <i class="fab fa-php"></i>
@@ -84,7 +84,7 @@
                 <h2 class="sectionTitle">Portfolio</h2>
                 <section id="projects" style="margin: 2% 0;" class="d-flex flex-column flex-lg-row justify-content-between">
                     <div style="margin: auto">
-                        <img src="./img/alexbuaiscia.jpg" alt="main website of mine">
+                        <img src="../img/alexbuaiscia.jpg" alt="main website of mine">
                         <br>
                         <p id="caption">Main website. 
                         <br>Functions: login and sign-up; GUI to write and post on-line.
@@ -92,7 +92,7 @@
                         </p>
                     </div>
                     <div style="margin: auto; text-align: center">
-                        <img src="./img/deployment_tool.jpg" alt="developed deployment tool">
+                        <img src="../img/deployment_tool.jpg" alt="developed deployment tool">
                         <br>
                         <p id="caption">Work related deployment tool. Functions: upload files on an automation server;
                         <br>Loading the wanted file on one application server and running shell scripts 
