--- a/views/dev/newPost.ejs
+++ b/views/dev/newPost.ejs
@@ -1,12 +1,12 @@
 <% include ../partials/header %>
     <div class="spaceSection">
         <div class="row">
-            <h1 style="text-align: center; padding: 20px;">Create a New Space Post</h1>
+            <h1 style="text-align: center; padding: 20px;">Create a New Dev Post</h1>
         </div>
         <div class="row">
             <div class="col-md-12">
                 <div style="width: 80%; margin: 25px auto;">
-                    <form action="/spaceBlog" method="POST">
+                    <form action="/devblog" method="POST">
                         <div class="form-group">
                             <input class="form-control" type="text" name="name" placeholder="name">
                         </div>
@@ -29,14 +29,14 @@
 
 
 
-                    <a href="/spaceblog">Go Back</a>
+                    <a href="/devblog">Go Back</a>
                 </div>
             </div>
 
         </div>
     </div>
 
-    
+
 
 
     <% include ../partials/footer %>
