--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,10 +1,9 @@
 <% include ../partials/header %>
-    <div class="row">
-        <h1 style="text-align: center">Add New Comment to
+        <h2 style="text-align: center">Add New Comment to
             <%= spacePost.name %>
-        </h1>
+        </h2>
         <div style="width: 30%; margin: 25px auto;">
-            <form action="/spaceblog/<%= spacePost._id %>/comments" method="POST">
+            <form action="/spaceblog/<%= spacePost._id %>/devcomment" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" name="comment[text]" placeholder="text">
                 </div>
@@ -14,5 +13,4 @@
             </form>
             <a href="/spaceblog">Go Back</a>
         </div>
-    </div>
     <% include ../partials/footer %>
