--- a/views/dev/edit.ejs
+++ b/views/dev/edit.ejs
@@ -1,42 +1,38 @@
 <% include ../partials/header %>
+
     <div class="spaceSection">
         <div class="row">
-            <h1 style="text-align: center; padding: 20px;">Create a New Space Post</h1>
+            <h1 style="text-align: center; padding: 20px;"> Edit
+                <%= devPost.name %>
+            </h1>
         </div>
         <div class="row">
             <div class="col-md-12">
                 <div style="width: 80%; margin: 25px auto;">
-                    <form action="/spaceBlog" method="POST">
+                    <form action="/devblog/<%= devPost._id %>?_method=PUT" method="POST">
                         <div class="form-group">
-                            <input class="form-control" type="text" name="name" placeholder="name">
+                            <input class="form-control" type="text" name="devPost[name]" value="<%= devPost.name %>">
                         </div>
                         <div class="form-group">
-                            <input class="form-control" type="text" name="image" placeholder="image url">
-                        </div>
-
-                        <div class="form-group">
-                            <textarea rows="10" cols="150" name="text" id="mytextarea" placeholder="Your text here"></textarea>
+                            <input class="form-control" type="text" name="devPost[image]" value="<%= devPost.image %>">
                         </div>
                         <div class="form-group">
-                            <input class="form-control" type="text" name="description" placeholder="description">
+                            <textarea rows="10" cols="150" name="devPost[text]" id="mytextarea"><%= devPost.text %></textarea>
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="devPost[description]" value="<%= devPost.description %>">
                         </div>
                         <div class="form-group">
                             <button class="btn btn-lg btn-primary btn-block">Submit!</button>
                         </div>
                     </form>
-
-                    <!-- Include stylesheet -->
-
-
-
-                    <a href="/spaceblog">Go Back</a>
+                    <a href="/devBlog">Go Back</a>
                 </div>
             </div>
 
         </div>
     </div>
 
-    
 
 
     <% include ../partials/footer %>
