--- a/views/devcomment/edit.ejs
+++ b/views/devcomment/edit.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %>
         <h2 style="text-align: center">Edit Comment</h2>
         <div style="width: 30%; margin: 25px auto;">
-            <form action="/spaceblog/<%= spacePost._id %>/comments/<%= comment._id %>?_method=PUT" method="POST">
+            <form action="/devblog/<%= devPost_id %>/devcomment/<%= comment._id %>?_method=PUT" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" name="comment[text]" value="<%= comment.text %>">
                 </div>
@@ -9,6 +9,6 @@
                     <button class="btn btn-lg btn-primary btn-block">Submit!</button>
                 </div>
             </form>
-            <a href="/spaceblog">Go Back</a>
+            <a href="/devblog">Go Back</a>
         </div>
     <% include ../partials/footer %>
