--- a/views/devcomment/new.ejs
+++ b/views/devcomment/new.ejs
@@ -1,14 +1,16 @@
 <% include ../partials/header %>
-        <h2 style="text-align: center">Edit Comment</h2>
+        <h2 style="text-align: center">Add New Comment to
+            <%= devPost.name %>
+        </h2>
         <div style="width: 30%; margin: 25px auto;">
-            <form action="/spaceblog/<%= spacePost._id %>/comments/<%= comment._id %>?_method=PUT" method="POST">
+            <form action="/devblog/<%= devPost._id %>/devcomment" method="POST">
                 <div class="form-group">
-                    <input class="form-control" type="text" name="comment[text]" value="<%= comment.text %>">
+                    <input class="form-control" type="text" name="comment[text]" placeholder="text">
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-primary btn-block">Submit!</button>
                 </div>
             </form>
-            <a href="/spaceblog">Go Back</a>
+            <a href="/devblog">Go Back</a>
         </div>
     <% include ../partials/footer %>
