--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
 
     <title>Alex Buaiscia</title>
     <style>
-        @import url('https://fonts.googleapis.com/css?family=Tangerine|Libre+Baskerville|Old+Standard+TT|Monoton|Dancing+Script');
+        @import url('https://fonts.googleapis.com/css?family=Tangerine|Libre+Baskerville|Old+Standard+TT|Monoton|Dancing+Script|Cinzel');
     </style>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="http://cdn.phpoll.com/css/animate.css" rel="stylesheet">
@@ -19,7 +19,16 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/main.css">
 
-
+    <script src="https://cloud.tinymce.com/5/tinymce.min.js"></script>
+    <script>
+    tinymce.init({
+        selector: "textarea",  
+        height: 600,
+        plugins: "codesample code",
+        toolbar: "undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image | codesample | code"
+        });
+    
+    </script>
 
 </head>
 
@@ -27,9 +36,10 @@
     <header>
 
 
-        <div id="navStyle" class="container-fluid">
+        <div id="navStyle" class="container-fluid px-0">
 
-            <nav class="navbar navbar-expand-lg navbar-light" role="navigation">
+            <nav class="navbar navbar-expand-xl navbar-light" role="navigation">
+                    <a style="font-family: 'Dancing Script', cursive; font-size: 40px;" class="navbar-brand" href="#">Alex Buaiscia</a>
 
                 <div class="navbar-header">
 
@@ -40,7 +50,6 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                    <a style="font-family: 'Dancing Script', cursive; font-size: 40px;" class="navbar-brand" href="#">Alex Buaiscia</a>
 
                     <ul style="margin: auto;" class="nav navbar-nav navbar-left">
                         <li><a class="nav-item nav-link active" href="/">Home</a></li>
@@ -65,7 +74,7 @@
                             <div style="z-index: 90;" class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="/devlife">Dev Home</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item disabled" href="#">Dev Blog</a>
+                                <a class="dropdown-item" href="/devblog">Dev Blog</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item disabled" href="#">Curriculum</a>
                             </div>
