--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -107,6 +107,7 @@
         <div id="contact" class="row">
             <div class="col-md-12">
                 <h2 class="sectionTitle">Contacts</h2>
+         
                 <section class="d-flex flex-row">
                     <div style="margin: 1% 5%;">
                         <a class="twitter-timeline" data-width="600" data-height="400" data-theme="dark" href="https://twitter.com/AlexBuaiscia?ref_src=twsrc%5Etfw">Tweets by AlexBuaiscia</a> 
@@ -117,6 +118,10 @@
                         <p><i class="fa fa-home"></i> Brno, Czech Republic </p>
                         <p><i class="fa fa-envelope"></i><a style="text-decorations:none; color:inherit;" href="mailto: alex.buaiscia@gmail.com"> alex.buaiscia@gmail.com</a> </p>
                         <p><i class="fab fa-linkedin-in"></i><a style="text-decorations:none; color:inherit;" href="https://www.linkedin.com/in/alex-buaiscia/"> Write me a message on Linkedin</a></p>
+
+                    </div>
+                    <div>
+                        <form style="border:1px solid #000000;padding:3px;text-align:center;" action="https://tinyletter.com/buaiscia" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/buaiscia', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p style="margin: 1% 5%; font-size: 22px;"><label for="tlemail">Subscribe to my newsletter: enter your email</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p style="font-size:0.8rem;"><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p></form>
                     </div>
                 </section>
 
