heavily edited - took off sections and made dev only section + more imgs

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,7 +36,7 @@
     <header>
 
 
-        <div id="navStyle" class="container-fluid px-0">
+        <div id="navStyle" class="container-fluid px-2">
 
             <nav class="navbar navbar-expand-xl navbar-light" role="navigation">
                     <a style="font-family: 'Dancing Script', cursive; font-size: 40px;" class="navbar-brand" href="#">Alex Buaiscia</a>
@@ -52,8 +52,8 @@
 
 
                     <ul style="margin: auto;" class="nav navbar-nav navbar-left">
-                        <li><a class="nav-item nav-link active" href="/">Home</a></li>
-                        <li class="nav-item dropdown">
+                        <!-- <li><a class="nav-item nav-link active" href="/">Home</a></li> -->
+                        <!-- <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle disabled" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Scrittura
                                   </a>
@@ -62,12 +62,20 @@
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Blog di scrittura</a>
                             </div>
-                        </li>
-                        <li class="nav-item">
+                        </li> -->
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="/spaceblog">Spaceblog</a>
+                        </li> -->
+                        
+                        <li class="nav-item">
+                            <a class="nav-link" href="/devlife">Dev Life</a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link" href="/devblog">Dev Blog</a>
                         </li>
 
-                        <li class="nav-item dropdown">
+                        <!-- <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Dev life
                                   </a>
@@ -78,7 +86,7 @@
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item disabled" href="#">Curriculum</a>
                             </div>
-                        </li>
+                        </li> -->
                     </ul>
 
 
