--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -34,7 +34,7 @@
             <section style="padding: 7% 5%;">
 
                 <div class="row">
-                    <div class="col-md-4">
+                    <!-- <div class="col-md-4">
                         <a href="/">
                             <div class="card mb-3 entry">
                                 <img class="card-img-top" style="opacity: 0.2;" src="https://www.quotidianosociale.it/wp-content/uploads/2018/02/corso-di-scrittura-creativa_53514_display.jpg" alt="Penna su foglio">
@@ -53,13 +53,24 @@
                                 </div>
                             </div>
                         </a>
-                    </div>
+                    </div> -->
                     <div class="col-md-4">
                         <a href="/devlife">
                             <div class="card mb-3 entry">
                                 <img class="card-img-top" src="https://steemitimages.com/DQmNW1WwVdQtYZzdndvrgRiYgiNLJmh2RU2wBshmHbiPvJj/photo5012998412878063555.jpg" alt="JS screenshot">
                                 <div class="card-info">
                                     <h2>Dev life</h2>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    
+                    <div class="col-md-4">
+                        <a href="/devblog">
+                            <div class="card mb-3 entry">
+                                <img class="card-img-top" src="img/dev_blog.jpg" alt="JS screenshot">
+                                <div class="card-info">
+                                    <h2>Dev blog</h2>
                                 </div>
                             </div>
                         </a>
