add portfolio section

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -64,7 +64,18 @@
                             </div>
                         </a>
                     </div>
-                    
+
+                    <div class="col-md-4">
+                        <a href="/portfolio">
+                            <div class="card mb-3 entry">
+                                <img class="card-img-top" src=img/portal.png" alt="JS screenshot">
+                                <div class="card-info">
+                                    <h2>Dev life</h2>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
                     <div class="col-md-4">
                         <a href="/devblog">
                             <div class="card mb-3 entry">
