fixed route to portfolio

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -68,7 +68,7 @@
                     <div class="col-md-4">
                         <a href="/portfolio">
                             <div class="card mb-3 entry">
-                                <img class="card-img-top" src=img/portal.png" alt="JS screenshot">
+                                <img class="card-img-top" src="img/portal.png" alt="JS screenshot">
                                 <div class="card-info">
                                     <h2>Dev life</h2>
                                 </div>
