--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -71,6 +71,11 @@
                             <a class="nav-link" href="/devlife">Dev Life</a>
                         </li>
                         
+                        
+                        <li class="nav-item">
+                            <a class="nav-link" href="/portfolio">Portfolio</a>
+                        </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link" href="/devblog">Dev Blog</a>
                         </li>
