--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -8,7 +8,7 @@
                 <ul class="devMenu">
                     <li><a href="#about"> About me</a></li>
                     <li><a href="#skills"> Skills</a></li>
-                    <li><a href="#projects"> Projects</a></li>
+                    <!-- <li><a href="#projects"> Projects</a></li> -->
                     <li><a href="#contact"> Contacts</a></li>
                 </ul>
             </div>
@@ -71,6 +71,7 @@
                     <i class="fab fa-js"></i>
                     <img src="../img/if_nodejs-new-pantone-black_1012818.svg" alt="NodeJS">
                     <i class="fab fa-npm"></i>
+                    <i class="fab fa-react"></i>
                     <img src="../img/if_mongodb_1012822.svg" alt="MongoDB">
                     <i class="fas fa-database"></i>
                     <i class="fab fa-linux"></i>
@@ -79,7 +80,7 @@
                 
             </div>
         </div>
-        <div id="projects" class="row">
+        <!-- <div id="projects" class="row">
             <div class="col-md-12">
                 <h2 class="sectionTitle">Portfolio</h2>
                 <section id="projects" style="margin: 2% 0;" class="d-flex flex-column flex-lg-row justify-content-between">
@@ -103,7 +104,7 @@
                     
                 </section>
             </div>
-        </div>
+        </div> -->
         <div id="contact" class="row">
             <div class="col-md-12">
                 <h2 class="sectionTitle">Contacts</h2>
