--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -31,7 +31,7 @@
             <header>
                 <h1 id="landingtitle">Alex Buaiscia</h1>
             </header>
-            <section style="padding: 7% 5%;">
+            <section style="padding: 7% 5%; font-family: 'Cinzel', serif;">
 
                 <div class="row">
                     <!-- <div class="col-md-4">
@@ -70,7 +70,7 @@
                             <div class="card mb-3 entry">
                                 <img class="card-img-top" src="img/portal.png" alt="JS screenshot">
                                 <div class="card-info">
-                                    <h2>Dev life</h2>
+                                    <h2>Portfolio</h2>
                                 </div>
                             </div>
                         </a>
