add smooth scroll

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -31,7 +31,7 @@
             <header>
                 <h1 id="landingtitle">Alex Buaiscia</h1>
             </header>
-            <section style="padding: 7% 5%; font-family: 'Cinzel', serif;">
+            <section style="padding: 7% 5%;">
 
                 <div class="row">
                     <!-- <div class="col-md-4">
