--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -1,52 +1,62 @@
 <% include ../partials/header %>
 
-
     
+
     <div>
         <div class="row">
             <div class="col-md-12">
                 <ul class="devMenu">
-                    <li><a href="#about"> About me</a></li>
-                    <li><a href="#skills"> Skills</a></li>
+                    <li>
+                        <a href="#about"> About me</a>
+                    </li>
+                    <li>
+                        <a href="#skills"> Skills</a>
+                    </li>
                     <!-- <li><a href="#projects"> Projects</a></li> -->
-                    <li><a href="#contact"> Contacts</a></li>
+                    <li>
+                        <a href="#contact"> Contacts</a>
+                    </li>
                 </ul>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12">
-                
-                    <div id="carouselExampleIndicators" class="carousel slide slider" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="d-block w-100" src="../img/road.jpg" alt="First slide">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <a href="#skills"><button type="button" class="btn btn-default btnSlide">Are those the skills you need?</button></a>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img style="max-height: 714px" class="d-block w-100" src="../img/desk.jpg" alt="Second slide">
-                                <div class="carousel-caption d-none d-md-block btnSlide">
-                                    <a href="/devblog"><button type="button" class="btn btn-default btnSlide">Sharing some knowledge 
-                                    </button></a>
-                                </div>
-                            </div>
 
+                <div id="carouselExampleIndicators" class="carousel slide slider" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="../img/road.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <a href="#skills">
+                                    <button type="button" class="btn btn-default btnSlide">Are those the skills you need?</button>
+                                </a>
+                            </div>
                         </div>
-                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
+                        <div class="carousel-item">
+                            <img style="max-height: 714px" class="d-block w-100" src="../img/desk.jpg" alt="Second slide">
+                            <div class="carousel-caption d-none d-md-block btnSlide">
+                                <a href="/devblog">
+                                    <button type="button" class="btn btn-default btnSlide">Sharing some knowledge
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
+
                     </div>
-                
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+
             </div>
         </div>
         <div class="row">
@@ -55,17 +65,17 @@
                     About me
                 </h2>
                 <p style="text-align: center; font-size: 24px; margin: 2% 0;">
-                    I'm an IT Application Specialist based in Brno, Czech Republic, who is building full-stack websites and applications.
-                    I love to learn technologies and to build new projects. </p>
-                    <div style="text-align:center">
-                        <a class="btn btn-info" target="_blank" href="../docs/Alex_Buaiscia_CV.pdf">Download my CV</a>
-                    </div>
+                    I'm an IT Application Specialist based in Brno, Czech Republic, who is building full-stack websites and applications. I love
+                    to learn technologies and to build new projects. </p>
+                <div style="text-align:center">
+                    <a class="btn btn-info" target="_blank" href="../docs/Alex_Buaiscia_CV.pdf">Download my CV</a>
+                </div>
             </div>
         </div>
-        <div id="skills"  class="row">
+        <div id="skills" class="row">
             <div class="col-md-12">
                 <h2 class="sectionTitle">Skills</h2>
-                <section class="d-flex flex-column flex-lg-row justify-content-between"  style="margin: 1% 5%; font-size: 6em; ">
+                <section class="d-flex flex-column flex-lg-row justify-content-between" style="margin: 1% 5%; font-size: 6em; ">
                     <img src="../img/if_html5_294678.svg" alt="HTML5">
                     <img src="../img/if_css3_294692.svg" alt="CSS3">
                     <i class="fab fa-js"></i>
@@ -77,7 +87,7 @@
                     <i class="fab fa-linux"></i>
                     <i class="fab fa-php"></i>
                 </section>
-                
+
             </div>
         </div>
         <!-- <div id="projects" class="row">
@@ -108,31 +118,53 @@
         <div id="contact" class="row">
             <div class="col-md-12">
                 <h2 class="sectionTitle">Contacts</h2>
-         
+
                 <section class="d-flex flex-row">
                     <div style="margin: 1% 5%;">
-                        <a class="twitter-timeline" data-width="600" data-height="400" data-theme="dark" href="https://twitter.com/AlexBuaiscia?ref_src=twsrc%5Etfw">Tweets by AlexBuaiscia</a> 
+                        <a class="twitter-timeline" data-width="600" data-height="400" data-theme="dark" href="https://twitter.com/AlexBuaiscia?ref_src=twsrc%5Etfw">Tweets by AlexBuaiscia</a>
                     </div>
                     <div style="margin: 1% 5%; font-size: 26px;  ">
                         <p> Get in touch:
                         </p>
-                        <p><i class="fa fa-home"></i> Brno, Czech Republic </p>
-                        <p><i class="fa fa-envelope"></i><a style="text-decorations:none; color:inherit;" href="mailto: alex.buaiscia@gmail.com"> alex.buaiscia@gmail.com</a> </p>
-                        <p><i class="fab fa-linkedin-in"></i><a style="text-decorations:none; color:inherit;" href="https://www.linkedin.com/in/alex-buaiscia/"> Write me a message on Linkedin</a></p>
+                        <p>
+                            <i class="fa fa-home"></i> Brno, Czech Republic </p>
+                        <p>
+                            <i class="fa fa-envelope"></i>
+                            <a style="text-decorations:none; color:inherit;" href="mailto: alex.buaiscia@gmail.com">
+                            alex.buaiscia@gmail.com</a>
+                        </p>
+                        <p>
+                            <i class="fab fa-linkedin-in"></i>
+                            <a style="text-decorations:none; color:inherit;" href="https://www.linkedin.com/in/alex-buaiscia/">
+                            Write me a message on Linkedin</a>
+                        </p>
 
                     </div>
                     <div>
-                        <form style="border:1px solid #000000;padding:3px;text-align:center;" action="https://tinyletter.com/buaiscia" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/buaiscia', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p style="margin: 1% 5%; font-size: 22px;"><label for="tlemail">Subscribe to my newsletter: enter your email</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p style="font-size:0.8rem;"><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p></form>
+                        <form style="border:1px solid #000000;padding:3px;text-align:center;" action="https://tinyletter.com/buaiscia" method="post"
+                            target="popupwindow" onsubmit="window.open('https://tinyletter.com/buaiscia', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
+                            <p style="margin: 1% 5%; font-size: 22px;">
+                                <label for="tlemail">Subscribe to my newsletter: enter your email</label>
+                            </p>
+                            <p>
+                                <input type="text" style="width:140px" name="email" id="tlemail" />
+                            </p>
+                            <input type="hidden" value="1" name="embed" />
+                            <input type="submit" value="Subscribe" />
+                            <p style="font-size:0.8rem;">
+                                <a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a>
+                            </p>
+                        </form>
                     </div>
                 </section>
 
-               
-                
+
+
             </div>
         </div>
     </div>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
-    $('.carousel').carousel({
+        $('.carousel').carousel({
             interval: 1000
         })
     </script>
