add portal project + links from portfolio home

--- a/views/dev/portfolio.ejs
+++ b/views/dev/portfolio.ejs
@@ -5,7 +5,7 @@
             <h2 class="portfolioTitle">Portfolio</h2>
             <section id="projects" style="margin: 2% 0;" class="d-flex flex-column flex-lg-row justify-content-between">
                 <div style="margin: auto">
-                    <img src="../img/alexbuaiscia.jpg" alt="main website of mine">
+                    <a href="./portfolio/website"><img src="../img/alexbuaiscia.jpg" alt="main website of mine"></a>
                     <br>
                     <p id="caption">Main website.
                         <br>Functions: login and sign-up; GUI to write and post on-line.
@@ -14,13 +14,22 @@
                     </p>
                 </div>
                 <div style="margin: auto; text-align: center">
-                    <img src="../img/deployment_tool.jpg" alt="developed deployment tool">
+                    <a href="./portfolio/deploymentTool"></a><img src="../img/deployment_tool.jpg" alt="developed deployment tool"></a>
                     <br>
                     <p id="caption">Work related deployment tool. Functions: upload files on an automation server;
                         <br>Loading the wanted file on one application server and running shell scripts
                         <br>to deploy and sync all the servers with the given parameters.
                         <br>
                         <span style="font-weight: 600">Technologies used: HTML5/CSS3, NodeJS, EJS, JS, Shell/Bash</span>
+                    </p>
+                </div>
+                <div style="margin: auto; text-align: center">
+                    <a href="./portfolio/portal"></a><img src="../img/portal.png" alt="portal tool"></a>
+                    <br>
+                    <p id="caption">Work related tool. Functions: Aggregate on one portal page all tools used by the team
+                        
+                        <br>
+                        <span style="font-weight: 600">Technologies used: HTML5/CSS3, React, Gatsby</span>
                     </p>
                 </div>
 
