--- a/views/dev/portfolio.ejs
+++ b/views/dev/portfolio.ejs
@@ -3,7 +3,7 @@
     <div id="projects" class="row; padding-bottom: 10px;">
         <div class="col-md-12">
             <h2 class="portfolioTitle">Portfolio</h2>
-            <section id="projects" style="margin: 2% 0;" class="d-flex flex-column flex-lg-row justify-content-between">
+            <section id="projects" style="margin: 2% 0;" class="projects">
                 <div style="margin: auto">
                     <a href="./portfolio/website"><img src="../img/alexbuaiscia.jpg" alt="main website of mine"></a>
                     <br>
@@ -29,7 +29,7 @@
                     <p id="caption">Work related tool. Functions: Aggregate on one portal page all tools used by the team
                         
                         <br>
-                        <span style="font-weight: 600">Technologies used: HTML5/CSS3, React, Gatsby</span>
+                        <span style="font-weight: 600">Technologies used: React, Gatsby, HTML5/CSS3</span>
                     </p>
                 </div>
 
