--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -43,7 +43,9 @@ h2 {
 
 }
 
-#navStyle {
+/* HEADER */
+
+.navStyle {
     font-size: 1.2em;
     position: fixed;
     /* overflow: hidden; */
@@ -102,7 +104,7 @@ h2 {
     position: absolute;
 }
 
-#alerts {
+.alerts {
     margin-left: 80%;
     margin-top: 100px;
     min-width: 200px;
@@ -114,11 +116,13 @@ h2 {
     padding-right: 10%; */
 }
 
+/* BLOG */
+
 .thumbnail .caption-full {
     padding: 9px;
 }
 
-#posts {
+.posts {
     max-width: 650px;
 }
 
@@ -155,7 +159,7 @@ img {
     border-top: 50px solid transparent;
 }
 
-#titleSpace {
+.titleSpace {
     padding-top: 10px;
     font-family: 'Monoton', cursive;
     font-size: 96px;
@@ -173,6 +177,36 @@ img {
 .signButtons {
     padding-right: -10%;
 }
+
+
+.readMore {
+    background-color: #1ABC9C;
+    color: #fff;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+    padding: .84rem 2.14rem;
+    font-size: .81rem;
+    -webkit-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;
+    -o-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;
+    margin: 0;
+    border: 0;
+    -webkit-border-radius: .125rem;
+    border-radius: .125rem;
+    cursor: pointer;
+    text-transform: uppercase;
+    white-space: normal;
+    word-wrap: break-word;
+    color: #fff;
+}
+
+.readMore:hover {
+    background: orange;
+}
+
+
+/* MAIN PAGE -DEV LIFE */
 
 .btnSlide {
     font-size: 40px;
@@ -226,32 +260,6 @@ img {
     width: 100%;
     height: auto;
     display: block;
-}
-
-#readMore {
-    background-color: #1ABC9C;
-    color: #fff;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
-    padding: .84rem 2.14rem;
-    font-size: .81rem;
-    -webkit-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;
-    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;
-    -o-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;
-    margin: 0;
-    border: 0;
-    -webkit-border-radius: .125rem;
-    border-radius: .125rem;
-    cursor: pointer;
-    text-transform: uppercase;
-    white-space: normal;
-    word-wrap: break-word;
-    color: #fff;
-}
-
-#readMore:hover {
-    background: orange;
 }
 
 .shadow {
@@ -345,6 +353,8 @@ a:link,
 a:active {
     text-decoration: none;
 }
+
+/* PORTFOLIO */
 
 .sectionTitle {
     font-family: 'Cinzel', serif;
@@ -468,9 +478,20 @@ a:active {
 }
 
 #projects img:hover {
-    -webkit-transform: scale(1.4, 1.4);
-    transform: scale(1.4, 1.4);
+    /* -webkit-transform: scale(1.4, 1.4); */
+    transform: scale(1.1, 1.1);
+    /* animation: biggerImg 0.7s forwards; */
+    transition: transform 1s ease-in-out;
 }
+
+/* @keyframes biggerImg {
+    100% {
+        -webkit-transform: scale(1.1, 1.1);
+        transform: scale(1.1, 1.1);
+    }
+    
+} */
+
 
 #titleDevBlog {
     font-family: 'Cinzel', serif;
