--- a/views/dev/devblog.ejs
+++ b/views/dev/devblog.ejs
@@ -15,7 +15,7 @@
 
                             <% devPosts.forEach(function(post){ %>
                                 <div class="container">
-                                    <div id="posts" class="card rounded shadow">
+                                    <div class="card rounded shadow posts">
 
                                         <!-- <div class="card-img-top"> -->
                                         <img class="item card-img" src="<%= post.image %>">
@@ -27,7 +27,7 @@
                                                 <%= post.description %>
                                             </p>
                                             <p style="margin: 20px 1%">
-                                                <a href="/devblog/<%= post._id %>" id="readMore" class="btn btn-primary">Read more &rarr;</a>
+                                                <a href="/devblog/<%= post._id %>"  class="btn btn-primary readMore">Read more &rarr;</a>
                                             </p>
                                             <!-- </div> -->
 
