--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -37,7 +37,7 @@
     <header>
 
 
-        <div id="navStyle" class="container-fluid px-2">
+        <div class="container-fluid px-2 navStyle">
 
             <nav class="navbar navbar-expand-xl navbar-light" role="navigation">
                     <a style="font-family: 'Dancing Script', cursive; font-size: 40px;" class="navbar-brand" href="#">Alex Buaiscia</a>
@@ -122,7 +122,7 @@
 
 
 
-        <div id="alerts" class="container-fluid">
+        <div class="container-fluid alerts">
 
             <% if(error && error.length > 0){ %>
                 <div class="alert alert-danger" role="alert">
