--- a/views/dev/portfolio/website.ejs
+++ b/views/dev/portfolio/website.ejs
@@ -1,8 +1,9 @@
 <% include ../../partials/header %>
 
     <h2>
-        page for personal website
+        Personal website
     </h2>
 
+    <img class="gif" src="../img/alexbuaisciasite_opt.gif"></img>
 
-    <% include ../../partials/footer %>
+<% include ../../partials/footer %>
